--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
+    <!-- 测试代码 -->
     <build>
         <plugins>
             <plugin>
